Fix Apache ServerName warnings and add proper WordPress configuration
- Updated docker-compose.yml to set ServerName for Apache
- Added wp-config.php with environment variable support
- Created DEPLOYMENT_GUIDE.md with setup instructions
- Excluded combined_database.sql from version control

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,11 @@ services:
       WORDPRESS_CONFIG_EXTRA: |
         define('WP_MEMORY_LIMIT', '256M');
         define('DISALLOW_FILE_EDIT', true);
+    command: >
+      bash -c "
+      echo 'ServerName sklztect.com' >> /etc/apache2/apache2.conf &&
+      docker-entrypoint.sh apache2-foreground
+      "
     volumes:
       - .:/var/www/html
     depends_on:
