--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,7 @@ services:
       MYSQL_USER: ${DB_USER:-wordpress}
       MYSQL_PASSWORD: ${DB_PASSWORD:-wordpress}
     volumes:
-      - ./combined_database.sql:/docker-entrypoint-initdb.d/combined_database.sql:ro
+      - ./combined_database.sql:/tmp/combined_database.sql:ro
     depends_on:
       wp_db:
         condition: service_healthy
@@ -74,10 +74,17 @@ services:
     command: >
       bash -c "
       echo 'Waiting for database to be ready...' &&
-      sleep 10 &&
-      echo 'Importing database...' &&
-      mysql -h wp_db -u root -p$$MYSQL_ROOT_PASSWORD $$MYSQL_DATABASE < /docker-entrypoint-initdb.d/combined_database.sql &&
-      echo 'Database import completed!' &&
+      sleep 15 &&
+      echo 'Checking if database is empty...' &&
+      TABLE_COUNT=$$(mysql -h wp_db -u root -p$$MYSQL_ROOT_PASSWORD $$MYSQL_DATABASE -e 'SHOW TABLES;' 2>/dev/null | wc -l) &&
+      if [ $$TABLE_COUNT -eq 0 ]; then
+        echo 'Database is empty, importing combined_database.sql...' &&
+        mysql -h wp_db -u root -p$$MYSQL_ROOT_PASSWORD $$MYSQL_DATABASE < /tmp/combined_database.sql &&
+        echo 'Database import completed successfully!' &&
+        echo 'Tables imported: $$(mysql -h wp_db -u root -p$$MYSQL_ROOT_PASSWORD $$MYSQL_DATABASE -e "SHOW TABLES;" 2>/dev/null | wc -l)'
+      else
+        echo 'Database already has data ($$TABLE_COUNT tables), skipping import.'
+      fi &&
       exit 0
       "
 
