--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,6 @@ services:
   wordpress:
     image: wordpress:latest
     restart: unless-stopped
-    ports:
-      - "8080:80"
     environment:
       WORDPRESS_DB_HOST: wp_db:3306
       WORDPRESS_DB_NAME: ${DB_NAME:-wordpress}
@@ -54,12 +52,11 @@ services:
     networks:
       - wordpress-network
       - dokploy-network
+    # Database should not be exposed via Traefik
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     restart: unless-stopped
-    ports:
-      - "8081:80"
     environment:
       PMA_HOST: wp_db
       PMA_USER: ${DB_USER:-wordpress}
@@ -75,6 +72,11 @@ services:
       - "traefik.http.routers.phpmyadmin.rule=Host(`phpmyadmin.${DOMAIN_NAME:-localhost}`)"
       - "traefik.http.routers.phpmyadmin.entrypoints=web"
       - "traefik.http.services.phpmyadmin.loadbalancer.server.port=80"
+    command: >
+      bash -c "
+      echo 'ServerName phpmyadmin.${DOMAIN_NAME:-localhost}' >> /etc/apache2/apache2.conf &&
+      docker-entrypoint.sh apache2-foreground
+      "
 
 volumes:
   wp_data:
