--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,10 @@ services:
       WORDPRESS_CONFIG_EXTRA: |
         define('WP_MEMORY_LIMIT', '256M');
         define('DISALLOW_FILE_EDIT', true);
-    command: >
+    entrypoint: >
       bash -c "
       echo 'ServerName ${DOMAIN_NAME:-localhost}' >> /etc/apache2/apache2.conf &&
-      docker-entrypoint.sh apache2-foreground
+      /usr/local/bin/docker-entrypoint.sh apache2-foreground
       "
     volumes:
       - .:/var/www/html
@@ -72,10 +72,10 @@ services:
       - "traefik.http.routers.phpmyadmin.rule=Host(`phpmyadmin.${DOMAIN_NAME:-localhost}`)"
       - "traefik.http.routers.phpmyadmin.entrypoints=web"
       - "traefik.http.services.phpmyadmin.loadbalancer.server.port=80"
-    command: >
+    entrypoint: >
       bash -c "
       echo 'ServerName phpmyadmin.${DOMAIN_NAME:-localhost}' >> /etc/apache2/apache2.conf &&
-      docker-entrypoint.sh apache2-foreground
+      /usr/local/bin/docker-entrypoint.sh apache2-foreground
       "
 
 volumes:
