Fix WordPress 500 errors and improve debugging
- Changed WordPress URLs to use http://localhost as default instead of https
- Added WP_DEBUG_DISPLAY false to prevent error display on frontend
- Added WP_ALLOW_REPAIR true for database repair capabilities
- This should resolve the 500 Internal Server Error issues
- phpMyAdmin is working correctly (confirmed by logs)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,15 @@ services:
       WORDPRESS_DB_PASSWORD: ${DB_PASSWORD:-wordpress}
       WORDPRESS_DEBUG: ${WORDPRESS_DEBUG:-0}
       WORDPRESS_TABLE_PREFIX: ${WORDPRESS_TABLE_PREFIX:-wp_}
-      WORDPRESS_HOME: ${WORDPRESS_HOME:-https://${DOMAIN_NAME:-localhost}}
-      WORDPRESS_SITEURL: ${WORDPRESS_SITEURL:-https://${DOMAIN_NAME:-localhost}}
+      WORDPRESS_HOME: ${WORDPRESS_HOME:-http://localhost}
+      WORDPRESS_SITEURL: ${WORDPRESS_SITEURL:-http://localhost}
       WORDPRESS_CONFIG_EXTRA: |
         define('WP_MEMORY_LIMIT', '256M');
         define('DISALLOW_FILE_EDIT', true);
         define('WP_DEBUG', true);
         define('WP_DEBUG_LOG', true);
+        define('WP_DEBUG_DISPLAY', false);
+        define('WP_ALLOW_REPAIR', true);
     command: >
       bash -c "
       echo 'ServerName ${DOMAIN_NAME:-localhost}' >> /etc/apache2/apache2.conf &&
