Fix phpMyAdmin configuration and database connection errors
- Added PMA_ARBITRARY=1 to allow arbitrary server connections
- Added PMA_VERBOSE=1 for better error reporting
- Added PMA_PMADB, PMA_CONTROLUSER, PMA_CONTROLPASS for proper configuration
- Added MYSQL_ROOT_PASSWORD environment variable
- This should resolve the config.secret.inc.php and database connection errors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,12 @@ services:
       PMA_ABSOLUTE_URI: https://phpmyadmin.${DOMAIN_NAME:-localhost}
       UPLOAD_LIMIT: 64M
       MEMORY_LIMIT: 256M
+      PMA_ARBITRARY: 1
+      PMA_VERBOSE: 1
+      PMA_PMADB: phpmyadmin
+      PMA_CONTROLUSER: pma
+      PMA_CONTROLPASS: pmapass
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-wordpress}
     depends_on:
       wp_db:
         condition: service_healthy
