Fix MySQL healthcheck command causing container to be unhealthy
- Changed from 'exit | mysql' to 'mysqladmin ping' command
- The original healthcheck command was causing the container to be marked as unhealthy
- MySQL is starting successfully but healthcheck was failing
- This should resolve the dependency failed to start error

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     volumes:
       - wp_data:/var/lib/mysql
     healthcheck:
-      test: ["CMD-SHELL", "exit | mysql -h localhost -P 3306 -u root -p$$MYSQL_ROOT_PASSWORD"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p$$MYSQL_ROOT_PASSWORD"]
       interval: 10s
       timeout: 5s
       retries: 5
