--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       WORDPRESS_DB_PASSWORD: ${DB_PASSWORD:-wordpress}
       WORDPRESS_DEBUG: ${WORDPRESS_DEBUG:-0}
       WORDPRESS_TABLE_PREFIX: wp_
+      WORDPRESS_HOME: ${WORDPRESS_HOME:-https://sklztect-sklztectwordpress-s6acc6-a14060-213-210-37-251.traefik.me}
+      WORDPRESS_SITEURL: ${WORDPRESS_SITEURL:-https://sklztect-sklztectwordpress-s6acc6-a14060-213-210-37-251.traefik.me}
       WORDPRESS_CONFIG_EXTRA: |
         define('WP_MEMORY_LIMIT', '256M');
         define('DISALLOW_FILE_EDIT', true);
