Add compressed database file and update db_importer to handle ZIP extraction

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,8 @@ services:
       MYSQL_DATABASE: ${DB_NAME:-wordpress}
       MYSQL_USER: ${DB_USER:-wordpress}
       MYSQL_PASSWORD: ${DB_PASSWORD:-wordpress}
+    volumes:
+      - ./combined_database.zip:/tmp/combined_database.zip:ro
     depends_on:
       wp_db:
         condition: service_healthy
@@ -69,12 +71,16 @@ services:
       bash -c "
       echo 'Waiting for database to be ready...' &&
       sleep 15 &&
+      echo 'Installing unzip...' &&
+      apt-get update && apt-get install -y unzip &&
       echo 'Dropping all existing tables...' &&
       mysql -h wp_db -u root -p$$MYSQL_ROOT_PASSWORD $$MYSQL_DATABASE -e 'SET FOREIGN_KEY_CHECKS = 0; DROP DATABASE IF EXISTS $$MYSQL_DATABASE; CREATE DATABASE $$MYSQL_DATABASE; SET FOREIGN_KEY_CHECKS = 1;' &&
-      echo 'Database reset completed. Please import your database manually via phpMyAdmin.' &&
-      echo 'Access phpMyAdmin at: https://phpmyadmin.${DOMAIN_NAME:-localhost}' &&
-      echo 'Login with: username=wordpress, password=wordpress' &&
-      echo 'Select the wordpress database and use the Import tab to upload combined_database.sql' &&
+      echo 'Extracting combined_database.zip...' &&
+      cd /tmp && unzip -o combined_database.zip &&
+      echo 'Importing combined_database.sql...' &&
+      mysql -h wp_db -u root -p$$MYSQL_ROOT_PASSWORD $$MYSQL_DATABASE < /tmp/combined_database.sql &&
+      echo 'Database import completed successfully!' &&
+      echo 'Tables imported: $$(mysql -h wp_db -u root -p$$MYSQL_ROOT_PASSWORD $$MYSQL_DATABASE -e \"SHOW TABLES;\" 2>/dev/null | wc -l)' &&
       exit 0
       "
 
