--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       WORDPRESS_DB_PASSWORD: ${DB_PASSWORD:-wordpress}
       WORDPRESS_DEBUG: ${WORDPRESS_DEBUG:-0}
       WORDPRESS_TABLE_PREFIX: wp_
-      WORDPRESS_HOME: ${WORDPRESS_HOME:-https://sklztect-sklztectwordpress-s6acc6-a14060-213-210-37-251.traefik.me}
-      WORDPRESS_SITEURL: ${WORDPRESS_SITEURL:-https://sklztect-sklztectwordpress-s6acc6-a14060-213-210-37-251.traefik.me}
+      WORDPRESS_HOME: ${WORDPRESS_HOME:-https://sklztect.siliconhaveli.in}
+      WORDPRESS_SITEURL: ${WORDPRESS_SITEURL:-https://sklztect.siliconhaveli.in}
       WORDPRESS_CONFIG_EXTRA: |
         define('WP_MEMORY_LIMIT', '256M');
         define('DISALLOW_FILE_EDIT', true);
@@ -28,9 +28,15 @@ services:
       - dokploy-network
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.wordpress.rule=Host(`sklztect-sklztectwordpress-s6acc6-a14060-213-210-37-251.traefik.me`)"
-      - "traefik.http.routers.wordpress.entrypoints=web"
+      - "traefik.http.routers.wordpress.rule=Host(`sklztect.siliconhaveli.in`)"
+      - "traefik.http.routers.wordpress.entrypoints=websecure"
+      - "traefik.http.routers.wordpress.tls=true"
+      - "traefik.http.routers.wordpress.tls.certresolver=letsencrypt"
       - "traefik.http.services.wordpress.loadbalancer.server.port=80"
+      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+      - "traefik.http.routers.wordpress-http.rule=Host(`sklztect.siliconhaveli.in`)"
+      - "traefik.http.routers.wordpress-http.entrypoints=web"
+      - "traefik.http.routers.wordpress-http.middlewares=redirect-to-https"
       - "traefik.http.middlewares.wordpress-headers.headers.customRequestHeaders.X-Forwarded-Proto=https"
       - "traefik.http.routers.wordpress.middlewares=wordpress-headers"
 
